# CapNav-lite

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.md.md  pyproject.toml
.github/workflows/: python-tests.yml
artifacts/: benchmark_summary.json  dev_holdout_24ep_report.json  dynamic_shared_control_recommended_report.json  dynamic_shared_control_report.json  dynamic_shared_control_v5_report.json  dynamic_shared_control_v5_report_from_tool.json  extended_heldout_60ep_report.json  paper_hard_multiseed.json  paper_hard_summary.json  realistic_shared_control_v7_report.json  rigorous_shared_control_report.json  rigorous_shared_control_v8_report.json
artifacts/publishable/: publishable_benchmark_report.json  v10_safety_shield_report.json
artifacts/publishable/synthetic_traces/: trace_s150_u11.csv  trace_s150_u3.csv  trace_s150_u7.csv  trace_s151_u11.csv  trace_s151_u3.csv  trace_s151_u7.csv  trace_s152_u11.csv  trace_s152_u3.csv  trace_s152_u7.csv  trace_s153_u11.csv  trace_s153_u3.csv  trace_s153_u7.csv
capnav-lite-repo-skeleton/: CITATION.cff  LICENSE  README.md
capnav-lite-repo-skeleton/capnav_lite_calibration/: package.xml  setup.cfg  setup.py
capnav-lite-repo-skeleton/capnav_lite_calibration/capnav_lite_calibration/: __init__.py
capnav-lite-repo-skeleton/capnav_lite_nav2_plugin/include/capnav_lite/: capnav_lite_controller.hpp
capnav-lite-repo-skeleton/capnav_lite_nav2_plugin/src/: capnav_lite_controller.cpp
capnav-lite-repo-skeleton/capnav_lite_safety_shell/: setup.py
capnav-lite-repo-skeleton/docs/: Micro_Pilot_Protocol.md
capnav-lite-repo-skeleton/schemas/: example_profile.json
capnav_lite_bringup/: package.xml  setup.cfg  setup.py
capnav_lite_bringup/config/: controller.yaml  safety.yaml
capnav_lite_bringup/launch/: sim_demo.launch.py
capnav_lite_calibration/capnav_lite_calibration/: calibrate_profile.py
capnav_lite_core/: __init__.py  adaptive_shared_control.py  benchmark.py  calibration.py  local_planner.py  occupancy.py  priors.py  profile.py  rigorous_evaluation.py  safety.py  trace_replay.py
capnav_lite_nav2_plugin/: CMakeLists.txt  package.xml
capnav_lite_nav2_plugin/include/capnav_lite/: capnav_lite_controller.hpp  profile.hpp
capnav_lite_nav2_plugin/plugins/: capnav_controller_plugin.xml  capnav_lite_controller_plugin.xml
capnav_lite_nav2_plugin/src/: capnav_lite_controller.cpp  profile_loader.cpp
capnav_lite_runtime/: package.xml  setup.cfg  setup.py
capnav_lite_runtime/capnav_lite_runtime/: calibration_node.py  profile_io.py  safety_monitor_node.py  shared_control_node.py
capnav_lite_safety_shell/: package.xml  setup.cfg
capnav_lite_safety_shell/capnav_lite_safety_shell/: __init__.py  safety_shell_node.py
docs/: ADAPTIVE_SHARED_CONTROL.md  ALGORITHM_UPGRADE_NOTES.md  ARCHITECTURE.md  DEPLOYMENT_ROADMAP.md  Field_Guide.md  MICRO_PILOT_PROTOCOL.md  PAPER_REPRODUCTION.md  PUBLISHABLE_IMPLEMENTATION.md  REAL_TRACE_INTEGRATION.md  RIGOROUS_EVALUATION.md  Reproducibility_Checklist.md  Risk_Register.md  STELLAR_UPDATE.md  TRACE_REPLAY.md  V10_SAFETY_SHIELD.md  V8_NOTES.md  VALIDATION.md
priors/: sample_prior.json
profiles/: default_adult.json
schemas/: prior_table.schema.json  user_profile.schema.json
sim/maps/: clinic_corridor.txt
tests/: test_benchmark_pipeline.py  test_dynamic_shared_control.py  test_prior_learning.py  test_profile_io.py  test_scoring_logic.py
tools/: evaluate_dynamic_shared_control.py  evaluate_rigorous_shared_control.py  evaluate_synthetic_benchmark.py  generate_maps.py  train_capability_prior.py
