<?xml version="1.0"?>
<package format="3">
  <name>capnav_lite_nav2_plugin</name>
  <version>0.1.0</version>
  <description>CapNav-Lite Nav2 controller plugin (skeleton).</description>
  <maintainer email="maintainers@example.org">CapNav-Lite contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins/capnav_lite_controller_plugin.xml"/>
  </export>
</package>
