<?xml version="1.0"?>
<package format="3">
  <name>capnav_lite_runtime</name>
  <version>0.2.0</version>
  <description>ROS 2 Python runtime nodes for calibration, safety, and shared control.</description>
  <maintainer email="jasrajharikrishna.b@indusschoolhyd.com">Jasraj Budigam</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
