<?xml version="1.0"?>
<package format="3">
  <name>capnav_lite_safety_shell</name>
  <version>0.1.0</version>
  <description>CapNav-Lite safety shell (skeleton).</description>
  <maintainer email="maintainers@example.org">CapNav-Lite contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
